--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
     "clsx": "^2.1.1",
+    "react-icons": "^5.3.0",
     "dexie": "^4.2.1",
     "immer": "^10.1.3",
     "react": "^19.1.1",
